# src/_helpers/apiRouter.ts
@@ -4,6 +4,8 @@ import { Logs } from '../_globals/logs';
 import { version } from './version';
 import { connection } from './db';
 import { User } from '../entity/User';
+import { addUser, authenticate } from '../_helpers/auth';
+import { AddUserSettings } from '../_models/AddUserSettings';
 
 export var apiRouter = express.Router();
 apiRouter.use(express.json());
@@ -30,6 +32,7 @@ apiRouter.get('/users', function(req, res) {
  * POST /users
  * @description Create a new user.
  * @response 200 - Add user response.
+ * @responseContent {ValidationError} 400.application/json
  * @responseContent {UserAdd} 200.application/json
  * @bodyContent {UserAddRequest} application/x-www-form-urlencoded
  * @bodyContent {UserAddRequest} application/json
@@ -45,17 +48,53 @@ function(req, res) {
       return res.status(400).json({ errors: errors.array() });
     }
     
-    let user = new User();
-    user.username = req.body.username;
-    if(req.body.name) user.name = req.body.name;
-    user.password = req.body.password;
-
-    let userRepository = connection.getRepository(User);
-    userRepository.save(user).then((user: User) => {
+    let user_settings: AddUserSettings = {
+        username: req.body.username,
+        name: req.body.name,
+        password: req.body.password,
+        isHidden: req.body.isHidden
+    };
+    
+    addUser(user_settings).then((user) => {
         delete user["password"];
         res.json({
             status: "ok",
             user: user
+        });
+    });
+});
+
+/**
+ * POST /login
+ * @description Create a new user.
+ * @response 200 - Add user response.
+ * @responseContent {ValidationError} 400.application/json
+ * @responseContent {AuthResponse} 200.application/json
+ * @responseContent {AuthErrorResponse} 401.application/json
+ * @bodyContent {LoginRequest} application/x-www-form-urlencoded
+ * @bodyContent {LoginRequest} application/json
+ * @bodyRequired
+ */
+apiRouter.post('/login',
+    body('username').isLength({ min: 5 }),
+    body('password').isLength({ min: 5 }),
+function(req, res) {
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+      return res.status(400).json({ errors: errors.array() });
+    }
+    
+    authenticate(req.body.username, req.body.password).then((response) => {
+        delete response.user["password"];
+        res.json({
+            access_token: response.access_token,
+            user: response.user,
+            scope: response.scope
+        });
+    }).catch((err) => {
+        res.status(401).json({
+            status: 'error',
+            message: err.message
         });
     });
 });
