# src/_models/AuthenticateSuccessResponse.ts
@@ -1,0 +1,7 @@
+import { User } from '../entity/User';
+
+export interface AuthenticateSuccessResponse {
+    access_token: string;
+    user: User;
+    scope: string;
+}
