# src/openapi.yaml
@@ -17,6 +17,20 @@ tags:
 
 components:
   schemas:
+    ValidationError:
+      type: object
+      properties:
+        errors:
+          type: array
+          items:
+            type: object
+            properties:
+              msg:
+                type: string
+              params:
+                type: string
+              location:
+                type: string
     User:
       type: object
       properties:
@@ -62,6 +76,44 @@ components:
               type: string
             isHidden:
               type: boolean
+    LoginRequest:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+      required:
+        - username
+        - password
+    AuthResponse:
+      type: object
+      properties:
+        access_token:
+          type: string
+        user:
+          type: object
+          properties:
+            id:
+              type: integer
+            username:
+              type: string
+            name:
+              type: string
+            isHidden:
+              type: boolean
+        scope:
+          type: string
+          example: "users:read;users:write"
+    AuthErrorResponse:
+      type: object
+      properties:
+        status:
+          type: string
+          example: "error"
+        message:
+          type: string
+          example: "Password is incorrect"
     Version:
       type: object
       properties:
